jEdit 5.1 version history
       (changes since jEdit 5.0pre1)
:encoding=UTF-8:

{{{ Version 5.1pre1

Thanks to Jarek Czekalski for contributing to this release.

{{{ Bug fixes

}}}
{{{ API Changes
- New method GUIUtilities.setAutoMnemonic(AbstractButton) (Jarek Czekalski)
}}}
{{{ Editing

}}}
{{{ UI
- Added mnemonics for popup menus in File System Browser (Commands, Plugins,
  Favorites). (Jarek Czekalski)
}}}
{{{ Miscellaneous

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: